objects/Service_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_New__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Services Details</relationshipLabel>
        <relationshipName>Services_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CY_Addressable_Mkt_000_s__c</fullName>
        <label>CY Addressable Mkt (000's)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CY_Cisco_Booking_000_s__c</fullName>
        <label>CY Cisco Booking (000's)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriptional</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>PCS</fullName>
                </value>
                <value>
                    <fullName>TSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>Airspace</fullName>
                </value>
                <value>
                    <fullName>Alaxala Networks</fullName>
                </value>
                <value>
                    <fullName>Alcatel</fullName>
                </value>
                <value>
                    <fullName>Allied Telesis</fullName>
                </value>
                <value>
                    <fullName>Apresia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Atrica</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Avici</fullName>
                </value>
                <value>
                    <fullName>BinTec Communications</fullName>
                </value>
                <value>
                    <fullName>Boda</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Cabletron</fullName>
                </value>
                <value>
                    <fullName>Charlotte's Web</fullName>
                </value>
                <value>
                    <fullName>Checkpoint</fullName>
                </value>
                <value>
                    <fullName>Ciena</fullName>
                </value>
                <value>
                    <fullName>Clarent</fullName>
                </value>
                <value>
                    <fullName>Corrigent</fullName>
                </value>
                <value>
                    <fullName>Cosine</fullName>
                </value>
                <value>
                    <fullName>Da Tang</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Digital China</fullName>
                </value>
                <value>
                    <fullName>Enterasys</fullName>
                </value>
                <value>
                    <fullName>Ericsson</fullName>
                </value>
                <value>
                    <fullName>Extreme Networks</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>Force10</fullName>
                </value>
                <value>
                    <fullName>Foundry Networks</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Expiry_Date__c</fullName>
        <label>Contract Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Contracts__c</fullName>
        <label>Existing Contracts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Incumbent</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>None Installed</fullName>
                </value>
                <value>
                    <fullName>Don't Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Share__c</fullName>
        <formula>if( CY_Addressable_Mkt_000_s__c =0, 0, CY_Cisco_Booking_000_s__c / CY_Addressable_Mkt_000_s__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Next_Yr_Addressable_Mkt_000_s__c</fullName>
        <label>Next Yr Addressable Mkt (000's)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_of_Choice__c</fullName>
        <label>Partner of Choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NOS</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>FTS</fullName>
                </value>
                <value>
                    <fullName>Security Readiness Foundation Review</fullName>
                </value>
                <value>
                    <fullName>QoS Readiness Foundation Review</fullName>
                </value>
                <value>
                    <fullName>IPT Readiness Foundation Review</fullName>
                </value>
                <value>
                    <fullName>Stability Readiness Foundation Review</fullName>
                </value>
                <value>
                    <fullName>Availability Readiness Foundation Review</fullName>
                </value>
                <value>
                    <fullName>NAIS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PCS</fullName>
                </value>
                <value>
                    <fullName>Smartnet</fullName>
                </value>
                <value>
                    <fullName>Shared Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Services Detail</label>
    <nameField>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>